// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Lines translation Should translate test line "Assert ... then continue excluded" 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then continue excluded" without appConfig 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then continue" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then continue" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then exit" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited then stop test",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then exit" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited then stop test",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then fail" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited then fail",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then fail" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited then fail",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then warn" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited then warn",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then warn" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited then warn",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... timeout ... then continue" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    Object {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... timeout ... then continue" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    Object {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ... only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "text",
              "value": "prompt text",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "message",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back excluded" 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back excluded" without appConfig 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Set window size" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "text",
              "value": "123x234",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "size",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Resize window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Set window size" without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "text",
              "value": "123x234",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "size",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Resize window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Change device state to ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Changing device state tolocked",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Change device state to ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Changing device state tolocked",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Change device state to unlock with ... passcode" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Changing device state tounlockedwith 111111 passcode",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Change device state to unlock with ... passcode" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Changing device state tounlockedwith 111111 passcode",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data excluded" 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data excluded" without appConfig 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on active element once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on active element once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... every ... exactly ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "input",
      "value": "4",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "1.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... every ... exactly ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "input",
      "value": "4",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "1.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on position ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on position ... once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Comment" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "# This is a comment",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Comment" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "# This is a comment",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Double tap on element ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Double tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Double tap on element ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Double tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ... excluded" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "comparator": "",
          "contentType": "block",
          "expectedValue": Object {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": Array [
            Object {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ... excluded" without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "comparator": "",
          "contentType": "block",
          "expectedValue": Object {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": Array [
            Object {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "comparator": "",
          "contentType": "block",
          "expectedValue": Object {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": Array [
            Object {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "comparator": "",
          "contentType": "block",
          "expectedValue": Object {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": Array [
            Object {
              "type": "text",
              "value": "JavaScript expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET cookies" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve value for \\"cook\\" cookie",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET cookies" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve value for \\"cook\\" cookie",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element attributes" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting [id, type, class] attributes of \\"element-api-id\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element attributes" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting [id, type, class] attributes of \\"element-api-id\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties with array selector" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of |\\"#app\\" element| -> |\\"div\\" element| -> |\\"span\\" element|",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties with array selector" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of |\\"#app\\" element| -> |\\"div\\" element| -> |\\"span\\" element|",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of \\"element-api-id\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element css properties" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting [width, height, opacity] css properties of \\"element-api-id\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element handle" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting handle of \\"element-api-id\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element handle" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting handle of \\"element-api-id\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element props" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve info of \\"div.className\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET element props" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve info of \\"div.className\\" element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle by "home page" text" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting handle of link with \\"home page\\" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle by "home page" text" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting handle of link with \\"home page\\" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle containing "home" text" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting handle of link containing \\"home page\\" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET link handle containing "home" text" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Getting handle of link containing \\"home page\\" text",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET location" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve value of current location",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "GET location" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve value of current location",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "JS expression" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve value of execution \\"1 + 1\\"",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "JS expression" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Retrieve value of execution \\"1 + 1\\"",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... for ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Long tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " for ",
    },
    Object {
      "type": "input",
      "value": "2s",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... for ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Long tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " for ",
    },
    Object {
      "type": "input",
      "value": "2s",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Long tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Long tap on element ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Long tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to active element" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to active element" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ... excluded" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ... excluded" without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to position ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to position ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "subject",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open URL ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open URL ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage excluded" 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage excluded" without appConfig 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at relative URL ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "/some/path",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "relative path",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application at relative URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at relative URL ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "/some/path",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "relative path",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application at relative URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Poll URL ... until response is ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "poll URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "expected response",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "until receive",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Poll URL every 0.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Poll URL ... until response is ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "https://suite.st",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "poll URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        Object {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": Array [
            Object {
              "type": "input",
              "value": "expected response",
            },
          ],
          "name": Array [
            Object {
              "type": "text",
              "value": "until receive",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Poll URL every 0.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... every ... exactly ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... every ... exactly ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": "",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": "",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": ", ",
    },
    Object {
      "type": "input",
      "value": "RIGHT",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Press ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Press button ",
    },
    Object {
      "type": "input",
      "value": "LEFT",
    },
    Object {
      "type": "text",
      "value": ", ",
    },
    Object {
      "type": "input",
      "value": "RIGHT",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "3s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Restart application" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Restart application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Restart application" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Restart application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Resume background application" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Resume background application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Resume background application" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Resume background application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... exactly ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test (",
    },
    Object {
      "type": "code",
      "value": "unkn...id-1",
    },
    Object {
      "type": "text",
      "value": ") exactly ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... exactly ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test (",
    },
    Object {
      "type": "code",
      "value": "unkn...id-1",
    },
    Object {
      "type": "text",
      "value": ") exactly ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "subject",
      "value": "Snippet 1",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "subject",
      "value": "Snippet 1",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "subject",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "subject",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... until ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "subject",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... until ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "subject",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from active element" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Scroll from ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
    Object {
      "type": "text",
      "value": " down by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from active element" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Scroll from ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
    Object {
      "type": "text",
      "value": " down by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from element ... to ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Scroll from ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
    Object {
      "type": "text",
      "value": " left by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Scroll from element ... to ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Scroll from ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
    Object {
      "type": "text",
      "value": " left by 1px",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to active element once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to active element once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to element ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to element ... once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window every ... exactly ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window every ... exactly ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "input",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "4",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "1.2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "4",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "1.2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to active element" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to active element" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ... only if ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "input",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on active element" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Single tap on ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on active element" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Single tap on ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on element ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Single tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Single tap on element ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Single tap on ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ... excluded" 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Sleep ",
    },
    Object {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ... excluded" without appConfig 1`] = `
Object {
  "children": Array [],
  "status": "excluded",
  "title": Array [
    Object {
      "type": "text",
      "value": "Sleep ",
    },
    Object {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Sleep ",
    },
    Object {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ..." without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Sleep ",
    },
    Object {
      "type": "input",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from active element once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
    Object {
      "type": "text",
      "value": " right by 3px in 1ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from active element once" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    Object {
      "type": "subject",
      "value": "active element",
    },
    Object {
      "type": "text",
      "value": " right by 3px in 1ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from element ... to ... in ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
    Object {
      "type": "text",
      "value": " left by 1px in 3ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Swipe from element ... to ... in ... until ... every ... max ..." without appConfig 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Swipe/Flick from ",
    },
    Object {
      "type": "subject",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met max ",
    },
    Object {
      "type": "input",
      "value": "6",
    },
    Object {
      "type": "text",
      "value": "x every ",
    },
    Object {
      "type": "input",
      "value": "5.7s",
    },
    Object {
      "type": "text",
      "value": " left by 1px in 3ms",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Wait until ... max ... then continue" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    Object {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Wait until ... max ... then continue" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited timeout ",
    },
    Object {
      "type": "input",
      "value": "1s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "close application" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Close application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "close application" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Close application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "get screenshot" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Take screenshot (base64)",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "get screenshot" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Take screenshot (base64)",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "save screenshot" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Save screenshot (\\"screen.jpg\\")",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "save screenshot" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Save screenshot (\\"screen.jpg\\")",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "setOrientation" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set screen orientation to ",
    },
    Object {
      "type": "input",
      "value": "Portrait",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "setOrientation" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set screen orientation to ",
    },
    Object {
      "type": "input",
      "value": "Portrait",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "suspend application" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Suspend application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "suspend application" without appConfig 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Suspend application",
    },
  ],
  "type": "test-line",
}
`;
